# ya-relay

./: .env-template  .gitignore  1  Cargo.toml  README.md  rust-toolchain.toml  stash.diff
.github/workflows/: build.yml  release.yml  rust.yml
client/: Cargo.toml
client/examples/: client.rs  http_client.rs  perf.rs  saturate.rs
client/examples/http_client/: response.rs  wrap.rs
client/examples/resources/: fwds.csv
client/src/: _client.rs  _config.rs  _direct_session.rs  _dispatch.rs  _encryption.rs  _error.rs  _expire.rs  _metrics.rs  _network_view.rs  _raw_session.rs  _routing_session.rs  _session.rs  _session_guard.rs  _session_init.rs  _session_initializer.rs  _session_layer.rs  _session_protocol.rs  _session_registry.rs  _session_state.rs  _session_traits.rs  _tcp_registry.rs  _transport_layer.rs  _transport_sender.rs  _virtual_layer.rs  client.rs  config.rs  direct_session.rs  dispatch.rs  encryption.rs  error.rs  expire.rs  legacy.rs  lib.rs  metrics.rs  network_view.rs  raw_session.rs  registry.rs  routing_session.rs  session.rs  session_guard.rs  (+10 more)
client/src/legacy/: client.rs  expire.rs  session_manager.rs  session_start.rs  virtual_layer.rs
client/src/session/: expire.rs  keep_alive.rs  network_view.rs  session_initializer.rs  session_state.rs  session_traits.rs
client/src/testing/: _forwarding_utils.rs  accessors.rs  forwarding_utils.rs  init.rs  legacy_forwarding_utils.rs  mocks.rs
client/src/transport/: tcp_registry.rs  transport_sender.rs  virtual_layer.rs
client/tests/: test_client.rs  test_expired_session.rs  test_forwarding.rs
client/tests/common/: mod.rs
crates/core/: Cargo.toml
crates/core/examples/: challenge.rs
crates/core/src/: challenge.rs  crypto.rs  dispatch.rs  error.rs  identity.rs  key.rs  lib.rs  server_session.rs  session.rs  sync.rs  testing.rs  udp_stream.rs  utils.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/protobuf/: ya_relay.proto
crates/proto/src/: codec.rs  lib.rs  proto.rs
crates/proto/src/codec/: datagram.rs  error.rs  forward.rs  stream.rs
crates/stack/: Cargo.toml
crates/stack/src/: connection.rs  device.rs  error.rs  interface.rs  lib.rs  metrics.rs  network.rs  packet.rs  packet_conv.rs  patch_smoltcp.rs  port.rs  protocol.rs  queue.rs  socket.rs  stack.rs
crates/unbounded-queue/: Cargo.toml
crates/unbounded-queue/benches/: spawn_send.rs
crates/unbounded-queue/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs  payload.rs
docs/: wsl_setup.md
server/: Cargo.toml  build.rs  config.md  readme.md
server/examples/: broadcast.rs  challenge.rs  client.rs  echo-server.rs  gremlin.rs  reorder_nodes.rs
server/src/: challenge.rs  config.rs  crypto.rs  error.rs  legacy.rs  lib.rs  main.rs  metrics.rs  packet.rs  packets.rs  public_endpoints.rs  server.rs  session.rs  state.rs  testing.rs  udp_server.rs  udp_stream.rs
server/src/legacy/: packet.rs  server.rs
server/src/metrics/: instance_count.rs
server/src/server/: forward.rs  ip_checker.rs  neighbours.rs  node.rs  register.rs  reverse_connection.rs  session.rs  slot.rs  state_decoder.rs
server/src/state/: control.rs  last_seen.rs  session_manager.rs  slot_manager.rs
server/src/testing/: client.rs  dispatch.rs  dispatcher.rs  key.rs  server.rs  session.rs
server/src/udp_server/: socket.rs
server/tests/: helpers.rs  test_broadcasts.rs  test_closed_session.rs  test_discovery.rs  test_expired_session.rs  test_forwarding.rs  test_init_session.rs  test_pause.rs.txt  test_reverse_connection.rs  test_reverse_connection.rs.txt  test_server.rs
server/tests/common/: mod.rs
server/ui/: app.js  index.html  metrics.js
server/ui/elements/: info-box.js  nav-bar.js
test_env/: .docker-compose.yml.swp  Dockerfile.base  Dockerfile.client  Dockerfile.server  Dockerfile.yagna.client  README.txt  basic-setup.sh  build.sh  docker-compose-2nets.yml  docker-compose-latency.yml  docker-compose-nat-clients.yml  docker-compose.yml  many-pings.sh  nat-clients-setup.sh  scenario-net-down.sh  scenario1.sh  useful.sh
tests/: README.md  conftest.py  docker-compose-nat-clients.yml  docker-compose.yml  pyproject.toml  pytest.ini  test_broadcasts.rs  test_client.py  test_client.rs  test_closed_session.rs  test_discovery.rs  test_expired_session.rs  test_forwarding.rs  test_init_session.rs  test_many_pings.py  test_nat_clients.py  test_net_down.py  test_net_down_70s_sleep.py  test_net_down_70s_timeout.py  test_ok.py  test_ping.py  test_priv_net.py  test_server.rs  test_session.rs  test_tcp_registry.rs
tests/common/: accessors.rs  init.rs  mod.rs  server.rs
tests/shared/: utils.py
tests_integration/: README.md  conftest.py  docker-compose.yml  pyproject.toml  test_client.py  test_many_pings.py  test_net_down.py  test_priv_net.py  test_sessions.py
tests_integration/shared/: utils.py
tests_py/: .requirements.txt  README.md  conftest.py
