[workspace]
members = ["client", "crates/*", "server"]

[profile.release]
opt-level = 3
lto = "thin"

[profile.bench]
opt-level = 3
lto = "thin"

[workspace.dependencies]
ya-relay-stack = { path = "crates/stack", version = "0.5.0" }
ya-relay-proto = { path = "crates/proto", version = "0.4.2" }
ya-relay-core = { path = "crates/core", version = "0.4.0" }
ya-relay-util = { path = "crates/util", version = "0.1" }
