[package]
name = "ya-relay-client"
version = "0.6.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "LGPL-3.0"
description = "Client for hybrid Net communication protocol"
repository = "https://github.com/golemfactory/ya-relay"

[dependencies]
ya-relay-stack = { workspace = true }
ya-relay-proto = { workspace = true }
ya-relay-core = { workspace = true }

ya-packet-trace = "0.1.0"

anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
derive_more = "0.99"
educe = "0.4"
futures = "0.3"
humantime = "2.1"
log = "0.4"
metrics = "0.21"
num_cpus = "1.15"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
tokio = { version = "1", features = ["net", "sync", "macros", "time", "rt"] }
tokio-stream = "0.1.8"
url = "2.1"
backoff = { version = "0.4.0", features = ["tokio"] }
hex = "0.4.3"


[dev-dependencies]
ya-relay-core = { workspace = true, features = ["test-utils"] }

actix-rt = "2.7"
actix-web = "4.3"
bytesize = "1.1"
dotenv = "0.15"
csv = "1"
humantime = "2.1"
lazy_static = "1.4"
prettytable-rs = "0.8"
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.2"
simple-logging = "2.0"
structopt = "0.3"
clap = "4.3.19"
tokio = { version = "1", features = ["fs", "io-util", "signal"] }
thiserror = "1.0.44"
env_logger = "0.10.0"

[features]
default = []
packet-trace-enable = ["ya-packet-trace/enable"]
test-utils = []
