[package]
name = "ya-relay-server"
version = "0.2.2"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
description = "Node discovery server for forwarding data between Golem network ndoes"
license = "LGPL-3.0"
repository = "https://github.com/golemfactory/ya-relay"

[lib]
name = "ya_relay_server"
path = "src/lib.rs"

[[bin]]
name = "ya-relay-server"
path = "src/main.rs"


[dependencies]
ya-relay-proto = { workspace = true }
ya-relay-core = { workspace = true }

actix-rt = "2.7"
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
env_logger = { version = "0.8", default-features = false }
futures = "0.3"
governor = "0.3.2"
humantime = "2.1"
itertools = "0.10.1"
log = "0.4"
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12", features = ["http-listener"] }
rand = { version = "0.8", features = ["std"] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["net", "sync", "macros", "time", "rt"] }
tokio-util = { version = "0.7", features = ["codec"] }
url = "2.1"
hex = "0.4.3"

[dev-dependencies]
serial_test = { git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test", features = [
    "actix-rt2",
] }
tokio-stream = "0.1.8"
test-case = "3.1"

ya-relay-client = { workspace = true }

[features]
test-utils = []

[[test]]
name = "test_expired_session"
path = "tests/test_expired_session.rs"
required-features = ["test-utils"]

[[test]]
name = "test_broadcasts"
path = "tests/test_broadcasts.rs"
required-features = ["test-utils"]

[[test]]
name = "test_forwarding"
path = "tests/test_forwarding.rs"
required-features = ["test-utils"]

[[test]]
name = "test_closed_session"
path = "tests/test_closed_session.rs"
required-features = ["test-utils"]

[[test]]
name = "test_discovery"
path = "tests/test_discovery.rs"
required-features = ["test-utils"]

[[test]]
name = "test_server"
path = "tests/test_server.rs"
required-features = ["test-utils"]

[[test]]
name = "test_init_session"
path = "tests/test_init_session.rs"
required-features = ["test-utils"]
