[package]
name = "ya-relay-core"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/ya-relay/crates/core"
repository = "https://github.com/golemfactory/ya-relay"
license = "LGPL-3.0"
description= "Golem relay base functionality"
