[package]
name = "ya-relay-core"
version = "0.3.1"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/ya-relay/crates/core"
repository = "https://github.com/golemfactory/ya-relay"
license = "LGPL-3.0"
description= "Golem relay base functionality"


[dependencies]
ya-relay-stack = { version = "0.4", path = "../stack" }
ya-relay-proto = { version = "0.4", path = "../proto" }

ya-client-model = "0.4"

anyhow = "1.0.56"
chrono = "0.4"
derive_more = "0.99"
digest = "0.9"
ethsign = "0.8"
futures = "0.3"
governor = "0.3.2"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
metrics = "0.19"
rand = { version = "0.8", features = ["std"] }
serde_json = "1.0"
sha2 = "0.9"
sha3 = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["net", "sync", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
env_logger = { version = "0.8", default-features = false }
