[package]
name = "ya-relay-proto"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/ya-relay/crates/proto"
repository = "https://github.com/golemfactory/ya-relay"
license = "LGPL-3.0"
description= "Golem relay messages"

[features]
default = ["codec"]
codec = ['futures', 'tokio', 'tokio-util', 'bytes', 'thiserror']

[dependencies]
prost = "0.7"

bytes = { version = "0.5.6", optional = true }
futures = { version = "0.3", optional = true }
thiserror = { version = "1", optional = true }
tokio-util = { version = "0.3", optional = true, features = ["codec"] }
tokio = { version = "0.2", optional = true, features = ["sync"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "sync"] }

[build-dependencies]
prost-build = "0.7"
