[package]
name = "ya-relay-proto"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/ya-relay/crates/proto"
repository = "https://github.com/golemfactory/ya-relay"
license = "LGPL-3.0"
description= "Golem relay messages"

[features]
default = ["codec"]
codec = ["futures", "tokio", "tokio-util", "bytes", "derive_more", "thiserror"]

[dependencies]
prost = "0.6"
rand = "0.8"

anyhow = "1.0"
bytes = { version = "0.5", optional = true }
derive_more = { version = "0.99", optional = true }
futures = { version = "0.3", optional = true }
thiserror = { version = "1.0", optional = true }
tokio = { version = "0.2", optional = true, features = ["sync"] }
tokio-util = { version = "0.3", optional = true, features = ["codec"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-util", "sync", "time"] }

[build-dependencies]
prost-build = "0.6"
