[package]
name = "ya-relay-stack"
version = "0.5.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/ya-relay/crates/stack"
repository = "https://github.com/golemfactory/ya-relay"
license = "LGPL-3.0"
description = "Embeddable networking stack"

[dependencies]
ya-relay-util = { workspace = true }
ya-smoltcp = { version = "0.1" }

derive_more = "0.99"
futures = "0.3"
lazy_static = "1"
log = "0.4"
managed = { version = "0.8", features = ["std"] }
num-derive = "0.3"
num-traits = "0.2"
rand = { version = "0.8", features = ["std"] }
thiserror = "1.0"
tokio = { version = "1", features = ["time", "rt"] }
tokio-stream = "0.1"

[features]
test-suite = []
stack-verbose = ["ya-smoltcp/verbose"]

[dev-dependencies]
anyhow = "1.0"
hex = "0.4"
sha3 = "0.8"
tokio = { version = "1", features = ["macros", "sync", "time"] }
