[package]
name = "ya-relay-util"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/ya-relay/crates/util"
repository = "https://github.com/golemfactory/ya-relay"
license = "LGPL-3.0"
description= "Golem relay utils"

[features]
default = ["payload"]
payload = ["bytes", "derive_more"]

[dependencies]
bytes = { version = "1", optional = true }
derive_more = { version = "0.99", optional = true }
